--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,9 +1,5 @@
-.modak-regular {
-    font-family: "Modak", system-ui;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
+@import url(https://fonts.googleapis.com);
+
 body {
     font-family: var(--paragraph-font);
     max-width: 960px;
