--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -77,3 +77,13 @@ nav a:hover {
 	font-weight: 700;
 	text-decoration: underline;
 }
+.column {
+    float: left;
+    width: 20%;
+    padding: 5px;
+}
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
